MAGETWO-44467: Magento HTML templates basic format
- Fix scope issue

--- a/app/code/Magento/Ui/view/base/web/templates/form/components/collection.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/components/collection.html
@@ -7,7 +7,7 @@
 <div class="ui-tabs">
     <ul class="address-list ui-tabs-nav">
 
-        <li class="address-list-item" outereach="elems" css="'ui-state-active': element.active" click="activate">
+        <li class="address-list-item" outereach="elems" css="'ui-state-active': active" click="activate">
             <div class="address-list-item-actions">
                 <button class="action-delete" type="button" click="$parent.removeAddress.bind($parent, $data)">
                     <span text="$parent.removeLabel"/>
