--- a/app/design/adminhtml/Magento/backend/Magento_Marketplace/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Marketplace/web/css/source/_module.less
@@ -10,6 +10,28 @@
 .page-partners {
     border-top: 1px solid @page-main-actions__border-color;
     padding-top: 2.5rem;
+
+    .partners-block {
+        .lib-vendor-prefix-display(flex);
+        .lib-vendor-prefix-flex-direction(row);
+        .lib-vendor-prefix-flex-wrap(wrap);
+
+        .ie9 & {
+            word-spacing: -.45rem;
+        }
+    }
+
+    .partner {
+        margin-bottom: @indent__xl;
+        padding: 0 @indent__m;
+        width: 100% / 3;
+
+        .ie9 & {
+            display: inline-block;
+            vertical-align: top;
+            word-spacing: normal;
+        }
+    }
 }
 
 .partners-description,
