--- a/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/text.phtml
+++ b/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/text.phtml
@@ -11,8 +11,7 @@
 <fieldset class="fieldset">
     <legend class="legend"><span><?php /* @escapeNotVerified */ echo __('Manage Swatch (values of your attribute)') ?></span></legend>
     <div id="swatch-text-options-panel">
-        <?php //@todo move style to css file ?>
-        <table class="data-table" style="clear: both;" cellspacing="0">
+        <table class="data-table clearfix" cellspacing="0">
             <thead>
             <tr id="swatch-text-options-table">
                 <th class="col-draggable"></th>
@@ -22,7 +21,7 @@
                 foreach ($storelist as $_store):
                     ?>
                     <?php if ($_store->getCode() == 'admin') : ?>
-                        <th class="col-<%- data.id %>" style="width: 50px;">Swatch</th>
+                        <th class="col-swatch col-<%- data.id %>">Swatch</th>
                         <th><?php /* @escapeNotVerified */ echo $_store->getName() ?></th>
                     <?php else : ?>
                         <th colspan="2"><?php /* @escapeNotVerified */ echo $_store->getName() ?></th>
@@ -66,7 +65,7 @@
                 <input class="input-radio" type="<%- data.intype %>" name="defaulttext[]" value="<%- data.id %>" <%- data.checked %><?php if ($block->getReadOnly()):?>disabled="disabled"<?php endif;?>/>
             </td>
             <?php foreach ($block->getStores() as $_store): ?>
-                <td class="col-<%- data.id %>" style="width: 50px;">
+                <td class="col-swatch col-<%- data.id %>">
                     <input class="input-text swatch-text-field-<?php /* @escapeNotVerified */ echo $_store->getId() ?> <?php if ($_store->getId() == \Magento\Store\Model\Store::DEFAULT_STORE_ID): ?>required-option<?php endif; ?>" name="swatchtext[value][<%- data.id %>][<?php /* @escapeNotVerified */ echo $_store->getId() ?>]" type="text" value="<%- data.swatch<?php /* @escapeNotVerified */ echo $_store->getId() ?> %>" />
                 </td>
                 <td class="swatch-col-<%- data.id %>">
