MAGETWO-45877: "Remove Product from Mini Shopping Cart" Storefront pop-up contains an overlap

--- a/app/design/frontend/Magento/blank/web/css/source/components/_modals_extend.less
+++ b/app/design/frontend/Magento/blank/web/css/source/components/_modals_extend.less
@@ -75,7 +75,7 @@
         }
 
         .action-close {
-            padding: @modal-popup__padding;
+            padding: @indent__s;
         }
     }
 
