--- a/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/text.phtml
+++ b/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/text.phtml
@@ -16,31 +16,23 @@
             <tr id="swatch-text-options-table">
                 <th class="col-draggable"></th>
                 <th class="col-default"><?php /* @escapeNotVerified */ echo __('Is Default') ?></th>
-                <?php
-                $storelist = $block->getStores();
-                foreach ($storelist as $_store):
-                    ?>
-                    <?php if ($_store->getCode() == 'admin') : ?>
-                        <th class="col-swatch col-<%- data.id %>">Swatch</th>
-                        <th><?php /* @escapeNotVerified */ echo $_store->getName() ?></th>
-                    <?php else : ?>
-                        <th colspan="2"><?php /* @escapeNotVerified */ echo $_store->getName() ?></th>
-                    <?php endif; ?>
-                <?php endforeach;
-                $storetotal = count($storelist) + 3;
-                ?>
+                <?php $stores = $block->getStores(); foreach ($stores as $_store): ?>
+                    <th class="col-swatch col-<%- data.id %>"><?php /* @escapeNotVerified */ echo __('Swatch'); ?></th>
+                    <th><?php /* @escapeNotVerified */ echo $_store->getName() ?></th>
+                <?php endforeach; ?>
+                <?php $colTotal = count($stores) * 2 + 3; ?>
                 <th class="col-delete">&nbsp;</th>
             </tr>
             </thead>
             <tbody data-role="swatch-text-options-container" class="ignore-validate"></tbody>
             <tfoot>
             <tr>
-                <th colspan="<?php /* @escapeNotVerified */ echo $storetotal; ?>">
+                <th colspan="<?php echo (int)$colTotal; ?>">
                     <input type="hidden" class="required-text-swatch-entry" name="text_swatch_validation"/>
                 </th>
             </tr>
             <tr>
-                <th colspan="<?php /* @escapeNotVerified */ echo $storetotal; ?>" class="col-actions-add">
+                <th colspan="<?php /* @escapeNotVerified */ echo $colTotal; ?>" class="col-actions-add">
                     <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()):?>
                         <button id="add_new_swatch_text_option_button" title="<?php /* @escapeNotVerified */ echo __('Add Swatch'); ?>"
                                 type="button" class="action- scalable add">
@@ -84,12 +76,6 @@
             </td>
         </tr>
     </script>
-    <?php
-    $values = [];
-    foreach($block->getOptionValues() as $value) {
-        array_push($values, $value->getData());
-    }
-    ?>
     <script type="text/x-magento-init">
         {
             "*": {
