MAGETWO-44467: Magento HTML templates basic format
- Add active area flag for functional tests
- Enable requests caching

--- a/app/code/Magento/Ui/view/base/web/templates/area.html
+++ b/app/code/Magento/Ui/view/base/web/templates/area.html
@@ -4,4 +4,6 @@
  * See COPYING.txt for license details.
  */
 -->
-<div if="wasActivated" each="elems" visible="active" render=""/>
+<if args="wasActivated">
+    <div each="elems" visible="active" attr="'data-area-active': active" render=""/>
+</if>
