--- a/app/code/Magento/Ui/view/base/web/templates/form/fieldset.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/fieldset.html
@@ -4,19 +4,45 @@
  * See COPYING.txt for license details.
  */
 -->
-
-<div
-        class="admin__fieldset-wrapper"
-        data-bind="css: {'admin__collapsible-block-wrapper': collapsible, 'opened': opened}">
-    <div
-            class="admin__fieldset-wrapper-title"
-            tabindex="3"
+<div class="fieldset-wrapper"
+     data-bind="css: {'admin__collapsible-block-wrapper': collapsible, '_show': opened, '_hide': !opened}">
+    <div class="fieldset-wrapper-title"
+         tabindex="0"
+         data-bind="click: toggleOpened, keyboard: { 13: toggleOpened }, visible: label">
+        <strong data-bind="
+            css: {
+                'admin__collapsible-title': collapsible,
+                title: !collapsible,
+                '_changed': changed,
+                '_loading': loading,
+                '_error': error
+                }">
             data-bind="click: toggleOpened, keyboard: { 13: toggleOpened }">
         <strong class="title">
             <span data-bind="text: label"></span>
+            <!-- ko if: element.collapsible -->
+            <span class="admin__page-nav-item-messages">
+               <span class="admin__page-nav-item-message _changed">
+                   <span class="admin__page-nav-item-message-icon"></span>
+                   <span class="admin__page-nav-item-message-tooltip"
+                         data-bind="i18n: 'Changes have been made to this section that have not been saved.'">
+                   </span>
+               </span>
+               <span class="admin__page-nav-item-message _error">
+                   <span class="admin__page-nav-item-message-icon"></span>
+               </span>
+                <span class="admin__page-nav-item-message-loader">
+                   <span class="spinner">
+                       <span></span><span></span><span></span><span></span>
+                       <span></span><span></span><span></span><span></span>
+                   </span>
+               </span>
+            </span>
+            <!-- /ko -->
         </strong>
     </div>
-    <div class="admin__fieldset-wrapper-content" data-bind="visible: opened">
+    <div class="admin__fieldset-wrapper-content"
+         data-bind="css: {'admin__collapsible-content': collapsible, '_show': opened, '_hide': !opened}">
         <fieldset class="admin__fieldset">
             <!-- ko foreach: { data: elems, as: 'element' } -->
             <!-- ko template: element.getTemplate() --><!-- /ko -->
