MAGETWO-45380: Add Inheritance to UI controls

--- a/app/code/Magento/Ui/view/base/web/templates/form/field.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/field.html
@@ -39,6 +39,12 @@
             <div class="admin__field-note" data-bind="attr: { id: element.noticeId }"><span data-bind="text: element.notice"></span></div>
         <!-- /ko -->
 
+        <!-- ko if: element.isDifferedFromDefault -->
+            <a class="admin__field-reset-action action-reset" target="_blank" tabindex="0" data-bind="click: element.restoreToDefault">
+                RESET
+            </a>
+        <!-- /ko -->
+
         <!-- ko if: element.error() -->
             <label class="admin__field-error" data-bind="attr: { for: element.uid }, text: element.error"></label>
         <!-- /ko -->
