--- a/app/code/Magento/Backend/view/adminhtml/templates/page/footer.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/page/footer.phtml
@@ -9,5 +9,5 @@
 ?>
 <p class="magento-version">
     <strong><?php /* @escapeNotVerified */ echo __('Magento'); ?></strong>
-    <?php /* @escapeNotVerified */ echo __('ver. %1', $this->magentoVersion()) ?>
+    <?php /* @escapeNotVerified */ echo __('ver. %1', $block->getMagentoVersion()) ?>
 </p>
