MAGETWO-46210: Wish Lists listing is displayed not aligned on "View Product" Storefront page if responsive

--- a/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
@@ -34,6 +34,7 @@
 
             .items {
                 padding: 6px 0;
+                text-align: left;
             }
 
             &:extend(.abs-dropdown-items-new all);
