MAGETWO-46208: "Create New Wish List" Storefront pop-up doesn't fit the view-port if responsive

--- a/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
@@ -118,7 +118,9 @@
 
         //  Wish list popup
         &.window.popup {
+            box-sizing: border-box;
             .lib-popup();
+
             &.active {
                 display: block;
             }
