--- a/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
@@ -104,7 +104,9 @@
         }
 
         &.window.popup {
+            box-sizing: border-box;
             .lib-popup();
+
             &.active {
                 display: block;
             }
