MAGETWO-46235: "Copy Selected" drop-down is displayed outside the visible view-port on "Edit Wish List" Storefront page

--- a/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
@@ -236,6 +236,22 @@
                     margin-right: @indent__base;
                 }
 
+                .copy {
+                    .dropdown {
+                        right: 0;
+
+                        &:before {
+                            left: auto;
+                            right: 11px;
+                        }
+
+                        &:after {
+                            left: auto;
+                            right: 10px;
+                        }
+                    }
+                }
+
                 &-actions {
                 }
             }
