MAGETWO-45380: Add Inheritance to UI controls

--- a/app/code/Magento/Ui/view/base/web/templates/form/element/input.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/element/input.html
@@ -10,6 +10,7 @@
     data-bind="
         value: value,
         hasFocus: focused,
+        valueUpdate: valueUpdate,
         attr: {
             name: inputName,
             placeholder: placeholder,
