--- a/app/code/Magento/Ui/view/base/web/templates/form/element/textarea.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/element/textarea.html
@@ -7,6 +7,7 @@
 
 <textarea class="admin__control-textarea" data-bind="
     value: value,
+    valueUpdate: valueUpdate,
     hasFocus: focused,
     attr: {
         name: inputName,
@@ -16,4 +17,4 @@
         placeholder: placeholder,
         id: uid
     }"
-/>
+        />
