--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
@@ -359,7 +359,8 @@
         }
     }
 
-    .cart.table-wrapper {
+    .cart.table-wrapper,
+    .order-items.table-wrapper {
         .col.price,
         .col.qty,
         .col.subtotal,
