MAGETWO-45682: Create automated functional tests for Braintree
- Fields strict set to "0"
- Fix expiration date fields

--- a/dev/tests/functional/tests/app/Magento/Braintree/Test/Block/Form/Cc.xml
+++ b/dev/tests/functional/tests/app/Magento/Braintree/Test/Block/Form/Cc.xml
@@ -5,14 +5,17 @@
  * See COPYING.txt for license details.
  */
 -->
-<mapping strict="1">
+<mapping strict="0">
     <fields>
         <credit_card_number>
             <selector>#credit-card-number</selector>
         </credit_card_number>
-        <expiration>
-            <selector>#expiration</selector>
-        </expiration>
+        <credit_card_exp_month>
+            <selector>#expiration-month</selector>
+        </credit_card_exp_month>
+        <credit_card_exp_year>
+            <selector>#expiration-year</selector>
+        </credit_card_exp_year>
         <cvv>
             <selector>#cvv</selector>
         </cvv>
