--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -9,6 +9,7 @@
 
 @import 'fields/_control-table.less';
 @import 'fields/_field-tooltips.less';
+@import 'fields/_field-reset.less';
 
 //
 //  Form Fields
@@ -173,9 +174,43 @@
         }
     }
 }
+
 .admin__field-control {
     & + & {
         margin-top: 1.5rem;
+    }
+
+    //  If there is a tooltip
+    &._with-tooltip {
+        > .admin__control-text,
+        > .admin__control-textarea {
+            width: ~'calc(100% - @{field-tooltip__width} - 4px)'; // Minus space size
+        }
+
+        .admin__field-tooltip {
+            width: auto;
+        }
+    }
+
+    //  If there is a fallback reset button
+    &._with-reset {
+        > .admin__control-text,
+        > .admin__control-textarea {
+            width: ~'calc(100% - @{field-fallback-reset__width} - 4px)'; // Minus space size
+        }
+
+        .admin__field-fallback-reset {
+            margin-top: @field-fallback-reset__margin-top;
+            vertical-align: top;
+        }
+
+        //  If both
+        &._with-tooltip {
+            > .admin__control-text,
+            > .admin__control-textarea {
+                width: ~'calc(100% - @{field-fallback-reset__width} - @{field-tooltip__width} - 8px)'; // Minus 2 space sizes
+            }
+        }
     }
 }
 
