--- a/app/design/adminhtml/Magento/backend/web/css/source/variables/_icons.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/variables/_icons.less
@@ -74,3 +74,5 @@
 @icon-grid__content: '\e63d';
 @icon-list-menu__content: '\e63e';
 @icon-cart__content: '\e63f';
+
+@icon-reset__content: @icon-ccw__content;
