MAGETWO-45380: Add Inheritance to UI controls

--- a/app/code/Magento/Ui/view/base/web/templates/form/element/helper/fallback-reset.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/element/helper/fallback-reset.html
@@ -6,7 +6,6 @@
 -->
 <button class="admin__field-fallback-reset"
         type="button"
-        tabindex="0"
-        data-bind="click: element.restoreToDefault">
-        <span data-bind="i18n: 'Reset'"></span>
+        click="element.restoreToDefault">
+        <span translate="'Reset'"></span>
 </button>
