MAGETWO-44595: Inconsistent use of Framework utilities
- Documentation update

--- a/lib/web/css/docs/source/_utilities.less
+++ b/lib/web/css/docs/source/_utilities.less
@@ -394,7 +394,7 @@
 //  ```
 //
 
-.example-url-check {
+.example-url-check-false {
     //  Set usage image path to false
     @_icon-image: false;
 
@@ -406,7 +406,7 @@
 }
 
 //  ```
-//  <div class="example-url-check-2">
+//  <div class="example-url-check-false">
 //      Block with no background.
 //  </div>
 //  ```
@@ -426,7 +426,7 @@
 //            <th>@_path</th>
 //            <td class="vars_value">'' | false | value</td>
 //            <td class="vars_value">@lib-url-check-output</td>
-//            <td>Passed url to wrap in 'url( ... )'. If the 'false' value passed mixin will return 'false'.</td>
+//            <td>Passed url to wrap in 'url( ... )'. If the 'false' value passed mixin will return 'false'</td>
 //        </tr>
 //    </table>
 //  </pre>
