--- a/lib/web/mage/gallery/module/_variables.less
+++ b/lib/web/mage/gallery/module/_variables.less
@@ -10,3 +10,4 @@
 @fotorama-thumb-arrow: 30px;
 @fotorama-fullscreen-zoom-time: 0.3s;
 @fotorama-inner-box-shadow: 3px;
+@fotorama-spinner-size: 64px;
