--- a/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
@@ -31,12 +31,11 @@
             );
             margin-right: 5%;
             vertical-align: middle;
+            &:extend(.abs-dropdown-items-new all);
 
             .items {
                 padding: 6px 0;
             }
-
-            &:extend(.abs-dropdown-items-new all);
 
             > .action {
                 &:extend(.abs-action-button-as-link all);
@@ -50,6 +49,7 @@
 
                     &:before {
                         margin: 0;
+                        width: 18px;
                     }
                 }
 
@@ -77,14 +77,6 @@
                         span {
                             &:extend(.abs-visually-hidden all);
                         }
-                    }
-                }
-            }
-
-            .product-info-main &,
-            .block-bundle-summary & {
-                > .action {
-                    &.split {
                     }
                 }
             }
@@ -176,20 +168,6 @@
                         font-weight: @font-weight__semibold;
                         &:extend(.abs-colon all);
                     }
-
-                    &-current {
-                    }
-                }
-
-                &-items {
-                    &:extend(.abs-reset-list all);
-                    &.active {
-                    }
-                }
-            }
-
-            &-add.item {
-                .action {
                 }
             }
 
@@ -201,13 +179,6 @@
                     font-weight: @font-weight__light;
                     margin-right: @indent__s;
                 }
-
-                .action.edit {
-                }
-            }
-
-            //  Wish list info
-            &-info {
             }
 
             &-notice {
@@ -234,9 +205,6 @@
 
                 &-select {
                     margin-right: @indent__base;
-                }
-
-                &-actions {
                 }
             }
 
@@ -354,12 +322,6 @@
                 .wishlist-name {
                     .lib-font-size(16);
                     &:extend(.abs-toggling-title-mobile all);
-
-                    &-label {
-                    }
-
-                    &-current {
-                    }
                 }
 
                 &-items {
@@ -408,19 +370,11 @@
                 strong {
                     .lib-font-size(26);
                 }
-
-                .action.edit {
-                }
             }
 
             //  Wish list info
             &-info {
                 margin-bottom: 15px;
-            }
-
-            &-notice {
-                &.private {
-                }
             }
 
             //  Wish list toolbar
@@ -429,16 +383,6 @@
                 &-actions {
                     margin-bottom: 15px;
                 }
-
-                &-select {
-                }
-
-                &-actions {
-                }
-            }
-
-            //  Wish list toolbar actions
-            &-dropdown.move {
             }
         }
     }
@@ -510,27 +454,12 @@
                     vertical-align: top;
                     white-space: nowrap;
                     width: 5%;
-
-                    span {
-                    }
-
-                    &.active {
-                    }
-
-                    &-label {
-                    }
-
-                    &-current {
-                    }
                 }
 
                 &-items {
                     display: table-cell;
                     padding-right: 160px;
                     vertical-align: top;
-
-                    &.active {
-                    }
 
                     .item {
                         display: inline-block;
@@ -564,9 +493,6 @@
                 strong {
                     .lib-font-size(40);
                 }
-
-                .action.edit {
-                }
             }
 
             //  Wish list info
@@ -574,28 +500,9 @@
                 float: left;
             }
 
-            &-notice {
-                &.private {
-                }
-            }
-
             //  Wish list toolbar
             &-toolbar {
                 float: right;
-
-                &-select,
-                &-actions {
-                }
-
-                &-select {
-                }
-
-                &-actions {
-                }
-            }
-
-            //  Wish list toolbar actions
-            &-dropdown.move {
             }
         }
     }
