--- a/app/design/frontend/Magento/luma/web/css/source/_extends.less
+++ b/app/design/frontend/Magento/luma/web/css/source/_extends.less
@@ -740,6 +740,10 @@
         .lib-css(color, @addto-hover-color);
         text-decoration: none;
     }
+
+    &:before {
+        width: 18px;
+    }
 }
 
 //
