--- a/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_MultipleWishlist/web/css/source/_module.less
@@ -30,20 +30,20 @@
             @_dropdown-split-list-min-width: 200px
             );
             vertical-align: middle;
+            &:extend(.abs-dropdown-items-new all);
 
             .items {
                 text-align: left;
-            }
+                .item {
+                    &:last-child {
+                        background: @color-gray-darken1;
 
-            .items .item:last-child {
-                background: @color-gray-darken1;
-
-                &:hover {
-                    .lib-css(background, @dropdown-list-item__hover);
+                        &:hover {
+                            .lib-css(background, @dropdown-list-item__hover);
+                        }
+                    }
                 }
             }
-
-            &:extend(.abs-dropdown-items-new all);
 
             .table-comparison &,
             .product-items & {
@@ -93,9 +93,6 @@
                 margin-bottom: @indent__s;
 
                 > .action {
-                    &.split {
-                    }
-
                     &.toggle {
                         padding: 4px @indent__xs;
                     }
@@ -134,22 +131,13 @@
                         font-weight: @font-weight__semibold;
                         &:extend(.abs-colon all);
                     }
-
-                    &-current {
-                    }
                 }
+
                 &-items {
                     &:extend(.abs-reset-list all);
-
-                    &.active {
-                    }
                 }
             }
 
-            &-add.item {
-                .action {
-                }
-            }
             //  Wish list name
             &-title {
                 margin-bottom: @indent__s;
@@ -158,21 +146,12 @@
                     font-weight: @font-weight__light;
                     margin-right: @indent__s;
                 }
-
-                .action.edit {
-                }
-            }
-            //  Wish list info
-            &-info {
             }
 
             &-notice {
                 .lib-css(color, @text__color__muted);
                 display: inline-block;
                 margin-right: @indent__base;
-
-                &.private {
-                }
             }
 
             //  Wish list toolbar
@@ -184,9 +163,6 @@
 
                 &-select {
                     margin-right: @indent__base;
-                }
-
-                &-actions {
                 }
             }
             //  Wish list toolbar actions
@@ -299,12 +275,6 @@
 
                 .wishlist-name {
                     &:extend(.abs-toggling-title-mobile all);
-
-                    &-label {
-                    }
-
-                    &-current {
-                    }
                 }
 
                 &-items {
@@ -352,18 +322,11 @@
                 strong {
                     .lib-font-size(26);
                 }
-                .action.edit {
-                }
             }
 
             //  Wish list info
             &-info {
                 margin-bottom: 15px;
-            }
-
-            &-notice {
-                &.private {
-                }
             }
 
             //  Wish list toolbar
@@ -372,16 +335,6 @@
                 &-actions {
                     margin-bottom: 15px;
                 }
-
-                &-select {
-                }
-
-                &-actions {
-                }
-            }
-
-            //  Wish list toolbar actions
-            &-dropdown.move {
             }
         }
     }
@@ -460,27 +413,12 @@
                     vertical-align: top;
                     white-space: nowrap;
                     width: 5%;
-
-                    span {
-                    }
-
-                    &.active {
-                    }
-
-                    &-label {
-                    }
-
-                    &-current {
-                    }
                 }
 
                 &-items {
                     display: table-cell;
                     padding-right: 160px;
                     vertical-align: top;
-
-                    &.active {
-                    }
 
                     .item {
                         display: inline-block;
@@ -514,9 +452,6 @@
                 strong {
                     .lib-font-size(40);
                 }
-
-                .action.edit {
-                }
             }
 
             //  Wish list info
@@ -524,28 +459,9 @@
                 float: left;
             }
 
-            &-notice {
-                &.private {
-                }
-            }
-
             //  Wish list toolbar
             &-toolbar {
                 float: right;
-
-                &-select,
-                &-actions {
-                }
-
-                &-select {
-                }
-
-                &-actions {
-                }
-            }
-
-            //  Wish list toolbar actions
-            &-dropdown.move {
             }
         }
     }
